<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Trip_Name">Trip Name</string>
    <string name="Date">Date</string>
    <string name="Name_of_Friends">Friends</string>
    <string name="Create_Trip">Create</string>
    <string name="View_Trip">View</string>
    <string name="Ok_trip">OK</string>
    <string name="Cancel_trip">Cancel</string>
    <string name="Welcome_Trip">Welcome to My Trip</string>
    <string name="title_activity_trip_history">TripHistoryActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="Trip_Location">Trip Location</string>
    <string name="Trip_Time">Trip Time</string>
    <string name="Trip_Date">Trip Date</string>
    <string name="Current_trip">Current Trip</string>
    <string name="trip_name">Trip Name</string>

</resources>
